--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* height: 15vh; */
-  height: 15%;
-  /* width: 100vw */
-  width: 100%;
+  height: 15vh;
+  width: 100vw ;
   background-color: rgb(4, 4, 26);
   color: wheat;
   padding: 25px 40px;
@@ -41,10 +39,8 @@ a {
 
 /* MAIN */
 .main {
-  /* height: 85vh; */
-  /* width: 100vw; */
-  height: 85%;
-  width: 100%;
+  height: 85vh;
+  width: 100vw;
   background-color: white;
 
 }
